--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ instagram:          default
 github:             default
 
 # personal
-location:           Los Angeles, CA
-phone:              310-318-5555
-email:              info@default.com
+location:           Fengtai，Beijing，China
+phone:              
+email:              31yanlvcheng@gmail.com
 
 # Gems
 gems:
