--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site
-title:              Massively
-bio:                'Jekyll version of the Massively theme by HTML5UP'
-description:        "Jekyll version of the Massively theme by HTML5UP"
-locale:             en_US
+title:              海を見える6LDK
+bio:                柄にもなくスキップしてる。
+description:        #"Jekyll version of the Massively theme by HTML5UP"
+locale:             en_US，zh_CN，ja_JP
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
